fix(accordion): minor UI changes (#1674)
* fix(accordion): minor UI changes

Refs #1671.

* fix(accordion): cover up border with hover background

--- a/src/components/accordion/_accordion.scss
+++ b/src/components/accordion/_accordion.scss
@@ -158,7 +158,7 @@
   .#{$prefix}--accordion__item {
     transition: all $transition--base $carbon--standard-easing;
     border-top: 1px solid $ui-03;
-    overflow: hidden;
+    overflow: visible;
 
     &:last-child {
       border-bottom: 1px solid $ui-03;
@@ -172,23 +172,26 @@
     align-items: center;
     justify-content: $accordion-justify-content;
     cursor: pointer;
-    padding: rem(7px) 0;
+    padding: rem(6px) 0;
     flex-direction: $accordion-flex-direction;
+    position: relative;
     width: 100%;
     margin: 0;
     transition: background-color $transition--base;
 
-    &:hover {
+    &:hover:before {
+      content: '';
+      position: absolute;
+      top: -1px;
+      left: 0;
+      width: 100%;
+      height: calc(100% + 2px);
       background-color: $hover-ui;
     }
 
     &:focus {
       outline: none;
-
-      .#{$prefix}--accordion__arrow {
-        @include focus-outline('outline');
-        outline-offset: 0px;
-      }
+      @include focus-outline('outline');
     }
   }
 
@@ -213,6 +216,7 @@
     width: 100%;
     text-align: left;
     font-weight: 400;
+    z-index: 0;
   }
 
   .#{$prefix}--accordion__content {
